-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1
-
Ubuntu
-
754edb8dadb9b3086f67eadabdde9659dfcb7caf
The WebChannel fails to connect when created in WebEngineView AND WebEngineProfile is specified.
If WebEngineProfile is not specified then the WebChannel connects fine.
I have debugged this down to webChannel.js sending the Init channel message and it never gets a response back.
Attached is a small example.
The example starts WebEngineView and loads an html file. When WebEngineView gets signal that it is loaded, then it injects some javascript (see qml file). The javascript creates web channel and calls "setStreamId" back in the QML object. I print out console messages along the way to see how far it gets. If everything works you should see value '89' be passed back to QML. If you then uncomment out the call that sets 'profile' property in webView and run again you should see it not come back from creating the channel.
You probably need to update qt.conf to point at QT installation.
Thanks for looking at this issue.
Sherry
| For Gerrit Dashboard: QTBUG-49521 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 141983,3 | Reassociate the web channel when setting a profile. | 5.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |