Reassociate the web channel when setting a profile.

The WebContentsAdapter gets recreated and the QmlWebChannel needs to be
reassociated with the new adapter instance.

Change-Id: I88494fd379c429f2ae98df95a22c04c334452088
Task-number: QTBUG-49521
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>